--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 requests>=2.25.0
 langdetect>=1.0.9
-googletrans==4.0.0rc1
+googletrans>=4.0.2
 demoji>=1.0.0
 python-dotenv>=0.19.0
 sentence-transformers>=2.2.0
-torch>=1.9.0 
+torch>=1.9.0
+httpx>=0.27.2,<0.29.0
+weaviate-client>=3.25.0 
