--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ sentence-transformers>=2.2.0
 torch>=1.9.0
 httpx>=0.27.2,<0.29.0
 weaviate-client>=4.0.0
+numpy>=1.21.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+scikit-learn>=1.0.0
